Update calculator button color and enhance README.md with deployment instructions for Vercel

--- a/calculator.html
+++ b/calculator.html
@@ -85,7 +85,7 @@
         }
 
         .equals {
-            background: #764ba2;
+            background: #2ecc40;
             color: #ffffff;
         }
 
